fix : jwt and security config url path
 - jwt 토큰 검증 통과 url 추가